[theme] blogs / layout - fixed naming scheme aligned with view naming - added spacing between articles (blog post)

--- a/sources/04-symbiosis/_components/page/page.stylus.styl
+++ b/sources/04-symbiosis/_components/page/page.stylus.styl
@@ -1,4 +1,4 @@
 .page-front,
-.page-blog
+.page-blogs
   flex-direction column
-  gap 1rem
+  gap 1.25rem
